--- a/app/src/main/res/menu/menu_source.xml
+++ b/app/src/main/res/menu/menu_source.xml
@@ -11,6 +11,9 @@
         android:id="@+id/action_net_import"
         android:title="网络导入" />
     <item
+        android:id="@+id/action_qr_import"
+        android:title="二维码导入" />
+    <item
         android:id="@+id/action_sort"
         android:title="智能排序" />
 </menu>
